Reorganized files in parsing/ dir, setup basic slist as a mutable singly linked-list

--- a/src/parsing/Makefile
+++ b/src/parsing/Makefile
@@ -1,17 +1,25 @@
-# Makefile for lexer/parser
+# Sherman Pay Jing Hao
+# Tuesday, 10. June 2014
+# Makefile for lexer/parser and Ast related
+# Flex: smallist.flex
+# Bison: grammar.y
+# AST: slist.c, ast.c
+# Execute tests via 'make test_(name)'
+
 CC = clang
-CFLAGS = -g
+CFLAGS = -g -Wall
 LIBS = -lfl
 TESTDIR = ./tests
+EXDIR = ./examples
 
-slist_test: slist_test.c slist.o
-	$(CC) $(CFLAGS) $^ -o $@
+test_slist: $(TESTDIR)/test_slist.c slist.o
+	$(CC) $(CFLAGS) -I . $^ -o $(TESTDIR)/$@ && $(TESTDIR)/$@
 
 slist.o: slist.c slist.h
 	$(CC) $(CFLAGS) $< -c
 
-ast_test: ast_test.c ast.o
-	$(CC) $(CFLAGS) $^ -o $@
+test_ast: ast_test.c ast.o
+	$(CC) $(CFLAGS) $^ -o $(TESTDIR)/$@ && $(TESTDIR)/$@
 
 ast.o: ast.c ast.h
 	$(CC) $(CFLAGS) $< -c
@@ -30,8 +38,15 @@ grammar.tab.h: grammar.tab.c
 grammar.tab.c: grammar.y
 	bison -d $<
 
-tests: lexer
-	for file in $(TESTDIR)/* ; do \
+test_parser: parser
+	for file in $(EXDIR)/* ; do \
+		echo $$file ; \
+		./parser $$file ; \
+		echo "\n" ; \
+	done
+
+test_lexer: parser
+	for file in $(EXDIR)/* ; do \
 		echo $$file ; \
 		./lexer $$file ; \
 		echo "\n" ; \
