Updated int to take from pool

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,12 @@ TEST_LIBS :=  -lgtest
 
 BIN := ./bin
 
-$(BIN)/ObjectsTest: ObjectsTest.cc ../build/Objects.o
+$(BIN)/objects_test: objects_test.cc ../build/objects.o
+	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $@
+	@echo "=============== STARTING TESTS ================="
+	./$@
+
+$(BIN)/list_test: list_test.cc ../build/list.o ../build/objects.o
 	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $@
 	@echo "=============== STARTING TESTS ================="
 	./$@
