Completed list implementation,
added Str() method in object
redesigned and implemented ConsC and List
redesigned Cons function
implemented tests
implemented ListIterator

Removed old code in list.cc

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,15 +4,20 @@ TEST_LIBS :=  -lgtest
 
 BIN := ./bin
 
-$(BIN)/objects_test: objects_test.cc ../build/objects.o
-	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $@
+list_test: list_test.cc ../build/list.o ../build/objects.o
+	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $(BIN)/$@
 	@echo "=============== STARTING TESTS ================="
-	./$@
+	$(BIN)/$@
 
-$(BIN)/list_test: list_test.cc ../build/list.o ../build/objects.o
-	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $@
+objects_test: objects_test.cc ../build/objects.o
+	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $(BIN)/$@
 	@echo "=============== STARTING TESTS ================="
-	./$@
+	$(BIN)/$@
+
+meta_test: meta_test.cc
+	$(CXX) $(CXXFLAGS) $(TEST_LIBS) $^ -o $(BIN)/$@
+	@echo "=============== STARTING TESTS ================="
+	$(BIN)/$@
 
 .PHONY: clean
 
